# example

./: .env  .gitignore  LICENSE  Makefile  README.md  example-cli  pyproject.toml
src/example/cli/: __init__.py  print.py
