[project]
name = "example"
version = "0.1.0"
description = "Sample UV Project"
readme = "README.md"
authors = [
    { name = "Abhishek S", email = "glove_orioles_0e@icloud.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mypy-extensions>=1.0.0",
    "mypy>=1.10.0",
    "ruff>=0.8.4",
    "typer>=0.15.1",
    "typing-extensions>=4.12.2",
]

[project.scripts]
example-cli = "example.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
